// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover styled components StyledArrow - basic render: StyledArrow has correct styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.background",
  "boxShadow": "$theme.lighting.shadow600",
  "height": "9px",
  "left": "10px",
  "position": "absolute",
  "top": "-4px",
  "transform": "rotate(45deg)",
  "width": "9px",
  "zIndex": 1,
}
`;

exports[`Popover styled components StyledBody - basic render: StyledBody has correct styles when closed 1`] = `
Object {
  "backgroundColor": "$theme.colors.background",
  "borderRadius": "$theme.borders.radius300",
  "boxShadow": "$theme.lighting.shadow600",
  "left": 0,
  "marginTop": "6px",
  "opacity": 0,
  "position": "absolute",
  "top": 0,
  "transform": "translate3d(0px, -12px, 0)",
  "transitionDuration": "0s",
  "transitionProperty": "opacity,transform",
  "transitionTimingFunction": "$theme.animation.easeInCurve",
  "zIndex": 1050,
}
`;

exports[`Popover styled components StyledBody - basic render: StyledBody has correct styles when open and animating 1`] = `
Object {
  "backgroundColor": "$theme.colors.background",
  "borderRadius": "$theme.borders.radius300",
  "boxShadow": "$theme.lighting.shadow600",
  "left": 0,
  "marginTop": "6px",
  "opacity": 1,
  "position": "absolute",
  "top": 0,
  "transform": "translate3d(100px, 100px, 0)",
  "transitionDuration": "0.1s",
  "transitionProperty": "opacity,transform",
  "transitionTimingFunction": "$theme.animation.easeOutCurve",
  "zIndex": 1050,
}
`;

exports[`Popover styled components StyledInner - basic render: StyledInner has correct styles 1`] = `
Object {
  "backgroundColor": "$theme.colors.background",
  "borderRadius": "$theme.borders.radius300",
  "position": "relative",
  "zIndex": 2,
}
`;

exports[`Popover styled components StyledPadding - basic render: StyledPadding has correct styles 1`] = `
Object {
  "padding": "12px",
}
`;
